packages/zarf-agent/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-hook
  namespace: zarf
  labels:
    app: agent-hook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agent-hook
  template:
    metadata:
      labels:
        app: agent-hook
        # Don't mutate this pod, that would be sad times
        zarf.dev/agent: ignore
    spec:
      nodeSelector:
        kubernetes.io/arch: "###ZARF_ARCHITECTURE###"
      imagePullSecrets:
        - name: private-registry
      priorityClassName: system-node-critical
      serviceAccountName: zarf
      # Security context to comply with restricted PSS
      securityContext:
        runAsUser: 65532
        fsGroup: 65532
        runAsGroup: 65532
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: server
          image: "###ZARF_REGISTRY###/###ZARF_CONST_AGENT_IMAGE###:###ZARF_CONST_AGENT_IMAGE_TAG###"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
          ports:
            - containerPort: 8443
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/certs
              readOnly: true
            # Required for OpenShift to mount k9s vendored directories
            - name: config
              mountPath: /.config
            - name: xdg
              mountPath: /etc/xdg
      volumes:
        - name: tls-certs
          secret:
            secretName: agent-hook-tls
        # Required for OpenShift to mount k9s vendored directories
        - name: config
          emptyDir: {}
        - name: xdg
          emptyDir: {}
