packages/zarf-agent/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-hook
  namespace: zarf
  labels:
    app: agent-hook
spec:
  selector:
    app: agent-hook
  ports:
    - port: 443
      targetPort: 8443
